Added local weather

--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
+<!doctype html>
 <html>
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="mystyle.css">
-  <script src="javascript.js"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <title>Ethan's Local Weather</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ethan Suttner</title>
+  <!-- <link rel='stylesheet' href='style.css'/> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="center">
-    <h3 class="weather-line">The weather in your location is:</h3>
-    <div class="well"><h4 class="weather-info"></h4></div>
-    <div class="temp tempF">
+  <div class="jumbotron">
+    <div id="header">
+      <h1>Ethan Suttner</h1>
     </div>
-    <div class="temp tempC hide">
+    <div id="content">
+      <div id="leftside">
+        <img alt="" src="professional_photo.jpg">
+      </div>
+      <div id="rightside">
+       <div class="col">
+          <h2>Engineer</h2>
+          <a href="project.html">Previous Engineering/Science Projects</a>
+        </div>
+      <div class="col">
+        <h2>Resume</h2>
+        <a href="EthanSuttnerResume.pdf">My Resume</a>
+      </div>
+      <div class="col">
+        <h2>Social Media</h2>
+        <p>Connect with me on the Internet</p>
+        <a href="https://www.facebook.com/ethan.suttner"> <img width="80" height="80"  src="facebook_img.png"></a>
+        <a href="https://instagram.com/ethansuttner"> <img width="80" height="80"  src="instagram_logo.jpg"></a>
+        <a href="https://www.youtube.com/user/cornellbamf/videos"><img width="80" height="80" src="youtube.jpg"></a>
+        <a href="https://www.strava.com/athletes/esuttner"><img width="80" height="80" src="Strava-Logo.jpg"></a>
+      </div>
     </div>
-    <button class="btn btn-primary target">Get the Weather</button>
-    <button class="btn btn-primary temp-button">Change Units</button>
   </div>
 </body>
 </html>
